--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  validate:
-    name: Validate code
+  build-n-publish:
+    name: Build, test, and publish Python distributions to PyPI
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.7', '3.x']
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - name: Set up Python.
+      uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
 
     - name: Install any requirements
       run: |
@@ -41,20 +38,6 @@ jobs:
         python -m pip install mypy
         # Omit "--strict" because numpy on github has type stubs.
         mypy --exclude 'build/|setup.py' .
-
-  publish:
-    name: Publish to PyPI
-    # if: startsWith(github.ref, 'refs/tags/v')
-    # if: github.ref == 'refs/heads/development'
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
 
     - name: Build a binary wheel and a source tarball
       run: |
