--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,24 +11,28 @@ on:
     branches: [main]
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   validate:
     name: Validate code
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     strategy:
       matrix:
         python-version: ['3.7', '3.x']
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Install any requirements
-      run: |
-        [ -f requirements.txt ] && python -m pip install -r requirements.txt
+      run: pip install .[dev]
 
     - name: Run tests including doctest
       run: |
@@ -44,15 +48,17 @@ jobs:
 
   publish:
     name: Publish to PyPI
+    # if: github.repository == 'hhoppe/some_repo'
     # if: startsWith(github.ref, 'refs/tags/v')
-    # if: github.ref == 'refs/heads/development'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     needs: validate
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python 3.x
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.x'
 
@@ -61,15 +67,7 @@ jobs:
         python -m pip install build --user
         python -m build --sdist --wheel --outdir dist/ .
 
-    - name: Publish distribution to Test PyPI
-      if: false
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-
     - name: Publish distribution to PyPI
-      # if: startsWith(github.ref, 'refs/tags/v')
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
