--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        python-version: ['3.7', '3.x']
+        python-version: ['3.8', '3.x']
     steps:
     - uses: actions/checkout@v3
 
@@ -68,7 +68,7 @@ jobs:
         python -m build --sdist --wheel --outdir dist/ .
 
     - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
       continue-on-error: true  # Ignore if pypi already has this version.
