--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "advent-of-code-hhoppe"
 description = "Library for Advent of Code -- Hugues Hoppe."
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 license = {file = "LICENSE"}
 authors = [{name = "Hugues Hoppe", email="hhoppe@gmail.com"}]
 classifiers = [
@@ -51,7 +51,6 @@ ignore_missing_imports = true
 strict = true
 exclude = "(^Other|^old_setup.py)"
 warn_return_any = false  # buggy numpy
-# python_version = "3.7"
 
 [tool.pylint.main]
 disable = [
@@ -63,7 +62,6 @@ reports = false
 score = false
 recursive = true
 ignore-paths = [".ipynb_checkpoints"]
-# py-version = "3.7"
 
 [tool.pylint.basic]
 good-names-rgxs = "^[a-z][a-z0-9]?|[A-Z]([A-Z_]*[A-Z])?$"
@@ -73,4 +71,4 @@ indent-string = "  "
 expected-line-ending-format = "LF"
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules"
+addopts = "--ignore-glob '*.#*' --doctest-modules"
