--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,17 +40,20 @@ build-backend = "flit_core.buildapi"
 
 [tool.autopep8]
 indent_size = 2
-max_line_length = 80
-ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741"
-exclude = ".ipynb_checkpoints"
+ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741,E20,W503"
+exclude = "*.ipynb_checkpoints"
 aggressive = 3
 recursive = true
 
 [tool.mypy]
 ignore_missing_imports = true
 strict = true
-exclude = "(^Other|^old_setup.py)"
-warn_return_any = false  # buggy numpy
+
+[tool.pyink]
+pyink-indentation = 2
+line-length = 100  # Default is 88.
+pyink-use-majority-quotes = true
+extend-exclude = "\\.ipynb"
 
 [tool.pylint.main]
 disable = [
@@ -61,7 +64,7 @@ disable = [
 reports = false
 score = false
 recursive = true
-ignore-paths = [".ipynb_checkpoints"]
+ignore-paths = [".*\\.ipynb_checkpoints"]
 
 [tool.pylint.basic]
 good-names-rgxs = "^[a-z][a-z0-9]?|[A-Z]([A-Z_]*[A-Z])?$"
