--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ build-backend = "flit_core.buildapi"
 
 [tool.autopep8]
 indent_size = 2
-ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741,E20,W503"
+ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741,E20,W503,E731"
 exclude = "*.ipynb_checkpoints"
 aggressive = 3
 recursive = true
@@ -60,7 +60,8 @@ extend-exclude = "\\.ipynb"
 disable = [
     "fixme", "redefined-builtin", "cell-var-from-loop",
     "using-constant-test", "simplifiable-condition", "import-outside-toplevel", "line-too-long",
-    "too-many-lines", "too-few-public-methods", "too-many-arguments", "too-many-locals", "use-dict-literal",
+    "too-many-lines", "too-few-public-methods", "too-many-arguments", "too-many-locals",
+    "use-dict-literal", "unnecessary-lambda-assignment",
 ]
 reports = false
 score = false
